[gd_scene load_steps=12 format=3 uid="uid://cd4d3v53k8xey"]

[ext_resource type="Script" path="res://player.gd" id="1_e83uc"]
[ext_resource type="Texture2D" uid="uid://b8hg8eq6dfuj2" path="res://art/fonchwalking_3.png" id="2_mwy4q"]
[ext_resource type="Texture2D" uid="uid://c2p631cglbvmh" path="res://art/fonchHurt_1.png" id="2_ytxre"]
[ext_resource type="Texture2D" uid="uid://binoxrhow4fuq" path="res://art/fonchwalking_4.png" id="3_lswxn"]
[ext_resource type="Texture2D" uid="uid://ca664rrohvvtf" path="res://art/fonchwalking_1.png" id="4_3kc08"]
[ext_resource type="Texture2D" uid="uid://dv7ypamk53fqv" path="res://art/fonchHurt_2.png" id="5_dd6h3"]
[ext_resource type="Texture2D" uid="uid://upf8o8438g0w" path="res://art/fonchwalking_2.png" id="5_ipe2j"]
[ext_resource type="Texture2D" uid="uid://bs2lul5ktk4dy" path="res://art/fire_2.png" id="6_0wfmd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4tm8l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ytxre")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mwy4q")
}, {
"duration": 1.0,
"texture": ExtResource("3_lswxn")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_dd6h3")
}],
"loop": true,
"name": &"up_hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_3kc08")
}, {
"duration": 1.0,
"texture": ExtResource("5_ipe2j")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ow55x"]
radius = 29.0
height = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jv727"]
radius = 44.0
height = 122.0

[node name="Player" type="Area2D"]
collision_mask = 6
script = ExtResource("1_e83uc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4tm8l")
animation = &"up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ow55x")

[node name="Weapon" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="WeaponHitbox" type="CollisionShape2D" parent="Weapon"]
shape = SubResource("CapsuleShape2D_jv727")

[node name="WeaponSprite" type="Sprite2D" parent="Weapon"]
position = Vector2(0, 13)
texture = ExtResource("6_0wfmd")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Weapon" to="." method="_on_weapon_body_entered"]
